# dejavis-ui

./: .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CREDITS.txt  LICENSE  README.md  USAGE.md
assets/: app.icns  dejavis-ui.rc  mingw_copydll.sh
backend/src/: SpoutVK.cpp  SpoutVK.h  av_decoder.cpp  av_decoder.h  av_encdec_globals.h  av_encoder.cpp  av_encoder.h  dejatimer.h  image_viewer.cpp  image_viewer.h  logger.h  main.cpp  multichannel_ringbuffer.h  ndi_receiver.cpp  ndi_receiver.h  ndi_sender.cpp  ndi_sender.h  ringbuffer.h  unimixer.cpp  unimixer.h  userconfig.cpp  userconfig.h  utils.cpp  utils.h  vulkan_logger.h
backend/src/audio/: audio.cpp  audio.h  audio_dev.cpp  audio_dev.h  audio_mixer.cpp  audio_mixer.h  audio_resampler.cpp  audio_resampler.h  audio_rtc.cpp  audio_rtc.h  audio_threadpool.h  macos_permissions.h  macos_permissions.mm
backend/src/audio/audioeffects/: EffectBank.cpp  EffectBank.h  FFmpegAtempo.cpp  FFmpegAtempo.h  FFmpegChorus.cpp  FFmpegChorus.h  FFmpegEcho.cpp  FFmpegEcho.h  FFmpegLimiter.cpp  FFmpegLimiter.h  FFmpegTremolo.cpp  FFmpegTremolo.h  FFmpegVibrato.cpp  FFmpegVibrato.h  audioeffects.cpp  audioeffects.h
backend/src/audio/limiter/: FFmpegLimiter.cpp  FFmpegLimiter.h  LimiterBank.cpp  LimiterBank.h
backend/src/audioplayer/: audioplayer.cpp  audioplayer.h
backend/src/db/: milkplaylistdb.cpp  milkplaylistdb.h  shadertoydb.cpp  shadertoydb.h
backend/src/fs/: folders.h  folders_mac.mm  localfilebrowser.cpp  localfilebrowser.h
backend/src/glad/include/glad/: glad.h
backend/src/glad/src/: glad.c
backend/src/glad_macos/include/glad/: glad.h
backend/src/glad_macos/src/: glad.c
backend/src/video/: postprocess.cpp  postprocess.h  projectm_wrapper.cpp  projectm_wrapper.h  render_globals.h  renderer.h  renderer_core.cpp  renderer_core.h  renderer_display.cpp  renderer_glfw.cpp  renderer_imgui.cpp  renderer_projectm.cpp  renderer_spout2.cpp  renderer_utils.cpp  renderer_videomixer.cpp  rgb2yuv_pipeline.cpp  rgb2yuv_pipeline.h  shadertoy_layer.cpp  shadertoy_layer.h  videofx_pipeline.cpp  videofx_pipeline.h  videofx_shader_sources.h  vulkan_utils.cpp  vulkan_utils.h  yuv2rgb_pipeline.cpp  yuv2rgb_pipeline.h
backend/src/video/yuv2rgb/: YUV2RGBPipeline.cpp  YUV2RGBPipeline.h  YUVConverter.h  YUVConverterCommon.h  YUVConverter_Common.cpp
backend/src/video/yuv2rgb/converters/: NV12Converter.cpp  NV12Converter.h  P010Converter.cpp  P010Converter.h  UYVYConverter.cpp  UYVYConverter.h  YUV420PConverter.cpp  YUV420PConverter.h
backend/src/webcontroller/: uploadmanager.cpp  uploadmanager.h  webrtc_broadcaster.cpp  webrtc_broadcaster.h  webrtc_session.cpp  webrtc_session.h  websocket.cpp  websocket.h
cmake/: FindShaderc.cmake  FixmacOSBundle.cmake  MacOSXBundleInfo.plist.in  dejavis-ui.rc.in  entitlements.plist
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  WebSocketContext.tsx  index.css  main.tsx  pcm_worker.js  rtcaudio_worker.js
frontend/src/components/: audio-dashboard.tsx  audiomixer-dashboard.tsx  audioplayer-dashboard.tsx  audioplayerview.tsx  connection-overlay.tsx  fileexplorer.tsx  projectm-dashboard.tsx  shader-dashboard.tsx  system-overview.tsx  systemstatussidebar.tsx  video-dashboard.tsx  videomixer-dashboard.tsx  videoplayerview.tsx
frontend/src/components/audio/: AudioMonitor.tsx  AudioMonitor_components.tsx  FFTCanvas.tsx  InputSelector.tsx  MixerInput.tsx  MixerOutput2.tsx  MixerSlider.tsx  OutputSelector.tsx  VUMeter.tsx  VUMeter_Horizontal.tsx  VuMeterCanvas.tsx  audiobuffer_simple.tsx  deviceselector.tsx
frontend/src/components/audio/effects/: fxbank.tsx
frontend/src/components/audioplayer/: audiobuffercard.tsx  audiocontrols.tsx  audioplayerheader.tsx  audiostatcard.tsx  playlistmanager.tsx
frontend/src/components/helpers/: audioplayercard.tsx  audiostagecard.tsx  audiovis.tsx  playersmall_cards.tsx
frontend/src/components/mobile/: system-overview-mobile.tsx
frontend/src/components/projectm/: category_dialog.tsx  categorytreenode.tsx  createplaylistdialog_milk.tsx  fileexplorer_milk.tsx  filepicker_milk.tsx  playlistexplorer_milk.tsx  presetexplorer_milk.tsx
frontend/src/components/rtc/: WebRTCProvider.tsx  WebcamPublisher.tsx  globalpip.tsx  webcam.tsx
frontend/src/components/shader/: shader-editor.tsx  shader-preview.tsx  shader-view.tsx  shaderbrowser.tsx
frontend/src/components/ui/: marquee.tsx
frontend/src/components/video/: ControlSlider.tsx  chromacontrol.tsx  fileupload.tsx  gpuinventory.tsx  imageuploader.tsx  lumacontrol.tsx  useWebRTCPublisher.ts  videobus_utils.tsx  videomixerpreview.tsx  videomixerpreview_borderless.tsx  webrtcpreview.ts
frontend/src/components/videoplayer/: videoplayercards.tsx  videoplayercontrols.tsx  videoplayerheader.tsx
frontend/src/hooks/: use-mobile.ts  workletaudioanalysis.ts
frontend/src/lib/: dejavis_utils.ts  shader-engine.ts
